Solucion de tests, agrega ejecutable del sistema